@@ -34,7 +34,7 @@
  ***************************************************************************/
 
 #include "file_format_manager.h"
-
+#include "Error.h"
 
 
 
